--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -37,6 +37,10 @@ h1, h2 {
     margin: 0 1rem 0 1rem;
 }
 
+.auth-button {
+    margin-left: auto;
+}
+
 #nav-bar a {
     text-decoration: none;
 }
@@ -47,4 +51,13 @@ h1, h2 {
 
 #nav-bar a, a:visited, a:hover, a:active {
   color: white;
+}
+
+#vessel-table td,
+#vessel-table th{
+   padding: 0.25rem 1rem 0.25rem 1rem;
+}
+
+h3 {
+    padding: 0 1rem 0 1rem;
 }
